# dddd_trainer

./: .gitignore  install.md  main.py  pyproject.toml  q.md  requirements.txt  test.py  test_onnx_export.py
nets/: __init__.py
projects/ddddocr/: config.yaml
projects/test_1/: config.yaml
projects/test_1/cache/: cache.train.tmp  cache.val.tmp
projects/test_1/models/: charsets.json  test_1_1.0_23_6000_2025-11-12-23-43-43.onnx  test_1_fixed_23_6000.onnx
projects/test_17/: config.yaml
projects/test_18/: config.yaml
projects/test_18/models/: charsets.json
projects/test_2/: config.yaml
projects/test_2/cache/: cache.train.tmp  cache.val.tmp
projects/test_2/models/: charsets.json  test_2_1.0_23_6000_2025-11-13-00-06-13.onnx
projects/test_3/: config.yaml
projects/test_3/cache/: cache.train.tmp  cache.val.tmp
projects/test_3/models/: charsets.json  test_3_1.0_23_6000_2025-11-13-00-34-15.onnx
projects/test_4/: config.yaml
projects/test_4/cache/: cache.train.tmp  cache.val.tmp
projects/test_4/models/: charsets.json
projects/test_number/: config.yaml
projects/test_number/cache/: cache.train.tmp  cache.val.tmp
projects/test_number/models/: charsets.json  test_number_1.0_27_7000_2025-11-12-23-10-19.onnx  test_number_1.0_27_7000_2025-11-12-23-12-25.onnx
projects/test_tx/: config.yaml
projects/test_tx/models/: charsets.json
utils/: create_tensor_cache.py  load_cache.py  train.py
练习平台17题验证码生成器源码&EXE/: source_code.py
练习平台18题验证码生成器源码&EXE/: source_code.py
